--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 body{
   font-family: 'Montserrat', sans-serif;
   color:var(--text);
-  background: linear-gradient(rgb(163, 241, 255) ,rgb(232, 236, 255), rgb(246, 244, 255), rgb(217, 255, 251), rgb(248, 219, 239),  rgb(179, 223, 253) );
+  background: linear-gradient(rgb(255, 255, 255) ,rgb(232, 236, 255), rgb(246, 244, 255), rgb(217, 255, 251), rgb(248, 219, 239),  rgb(179, 223, 253) );
   
   
 }
@@ -36,6 +36,7 @@ h1 {
    font-size: 40px;
    margin-block-start: 0.20em;
     margin-block-end: 0.20em;
+    font-weight: 600;
 }
 
 h2 {
@@ -53,7 +54,7 @@ h3 {
 h4 {
   color:var(--h4);
   font-family: 'Montserrat', sans-serif;
-  
+  font-weight:300px;
 }
 
 h5 {
@@ -72,7 +73,7 @@ p {
 }
 
 nav{
- color: var(--red);
+ color: var(--onyx);
  display: flexbox;
  flex-direction: row;
  justify-content: flex-end;
@@ -106,15 +107,14 @@ img{
 
 /* classes */
 .nav-bar{
-
   height: 40px;
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: space-around;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  background-color: rgba(255, 255, 255, 0.423);
+  background-color: rgb(232, 236, 255); 
 }
 
 .nav-item{
@@ -122,6 +122,7 @@ img{
   padding-left: 10px;
   padding-right: 10px;
   text-decoration: none;
+  color: var(--onyx)
 }
 
 
@@ -132,7 +133,7 @@ height: 50px;
 width: 50px;
 text-decoration: none;
 padding-left: 20px;
-padding-right: 20px;
+padding-right: 40px;
 }
 
 .description {
@@ -149,7 +150,7 @@ align-items: center;
   }
   
 .about-me {
-  background-color: rgba(254, 254, 253, 0.500);
+  background-color: rgba(254, 254, 253, 0.750);
   padding: 20px;
 }
 
@@ -161,7 +162,7 @@ align-items: center;
 .project{
   text-decoration: none;
   /* background-image: linear-gradient(to right, rgb(206, 246, 255) , rgb(229, 225, 252)); */
-  background-color: rgba(255, 255, 255, 0.500);
+  background-color: rgba(255, 255, 255, 0.750);
   font-family: 'Montserrat', sans-serif;
   flex-direction: column;
   justify-content: space-around;
@@ -185,11 +186,15 @@ max-height: 10rem;
 max-width: 17rem;
 }
 
+.form-section{
+background-color: rgba(255, 255, 255, 0.759);
+}
+
 .form {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background-color: rgba(255, 255, 255, 0.500);
+  background-color: rgba(128, 143, 255, 0.651);
   align-self: center;
   max-width: 100%;
   border-radius: 4px;
@@ -243,19 +248,33 @@ align-items: center;
  
 }
 
+footer{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  background-color: rgb(232, 236, 255); 
+}
+
+
 body {
 	/* background: linear-gradient( rgb(139, 222, 255) 50%, rgb(162, 244, 213) 50%); */
   margin: 0px;
 }
 
 
-#nav-item-1{
+/* #nav-item-1{
   color: rgb(35, 0, 193);
+  padding-inline-end: 50px ;
 }
 
 #nav-item-2{
   color:  rgb(35, 0, 193);
-}
+  padding-inline-end: 50px ;
+} */
 
 
 #logo {
@@ -278,18 +297,30 @@ color: var(--red);
       justify-content: space-around;
     }
 
+    .description{
+      justify-content: center
+
+    }
+
     #main-1{
       display: flex;
-      flex-direction: row;
+      flex-direction: row-reverse;
       justify-content: space-around;
     }
 
     #profile-photo {
-      max-width: 400px;
+      max-width: 800px;
     }
 
     .description{
-      max-width: 400px;
+      max-width: 600px;
     }
 
+    .nav-bar{
+      height: 100px;
+    }
+
+    .nav-item{
+      font-size: 20px;
+    }
  }
