--- a/style.css
+++ b/style.css
@@ -24,35 +24,27 @@
 body{
   font-family: 'Montserrat', sans-serif;
   color:var(--text);
+  width: 100%;
   background: linear-gradient(rgb(255, 255, 255) ,rgb(232, 236, 255), rgb(246, 244, 255), rgb(217, 255, 251), rgb(248, 219, 239),  rgb(179, 223, 253) );
-  
-  
+
 }
 
 /* Heading style */
 h1 {
-   color:var(--h1);
-   font-family: 'Montserrat', sans-serif;
-   font-size: 40px;
-   margin-block-start: 0.20em;
-    margin-block-end: 0.20em;
-    font-weight: 600;
+  
+  font-size: 40px;
+  margin-block-start: 0.20em;
+  margin-block-end: 0.20em;
+  font-weight: 600;
 }
 
 h2 {
-  color:var(--h2);
-  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
-  
 }
 
-h3 {
-  color:var(--h3);
-  font-family: 'Montserrat', sans-serif;
-}
+
 
 h4 {
-  color:var(--h4);
   font-family: 'Montserrat', sans-serif;
   font-weight:300px;
 }
@@ -70,6 +62,7 @@ h6 {
 p {
   color:var(--h4);
   font-family: 'Montserrat', sans-serif;
+  font-size: large;
 }
 
 nav{
@@ -84,9 +77,9 @@ em {
   font-family: 'Montserrat', sans-serif;
 }
 
-section{
+/* section{
   padding: 20px;
-}
+} */
 
 /* style to make style guide */
 
@@ -111,7 +104,7 @@ img{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   background-color: rgb(232, 236, 255); 
@@ -119,7 +112,7 @@ img{
 
 .nav-item{
   font-size: 16px;
-  padding-left: 60px;
+  padding-left: 30px;
   padding-right: 10px;
   text-decoration: none;
   color: var(--onyx)
@@ -128,10 +121,16 @@ img{
 
 
 .menu{
-  margin-right: 60px;
+  margin-right: 10px;
 }
 
 .social{
+  width:0px;
+  height:0px;
+}
+
+
+.language{
 height: 40px;
 width: 40px;
 text-decoration: none;
@@ -145,22 +144,23 @@ background-color:transparent;
 display: flex;
 flex-direction: column;
 align-items: center;
+padding:20px;
 }
 
 .socials{
-  display: flex;
-  justify-content: space-around;
-  margin-left: 60px;
+  width:0px;
+  height:0px;
   }
   
 .about-me {
-  background-color: rgba(254, 254, 253, 0.750);
+  background-color: rgb(255, 255, 255);
   padding: 20px;
 }
 
-.project{
+.projects{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .project{
@@ -171,8 +171,8 @@ align-items: center;
   flex-direction: column;
   justify-content: space-around;
   color:var(--dark-grey);
-  width: 20rem;
-  height: 15rem;
+  width: 400px;
+  height: 300px;
   border-radius: 1rem;
   justify-self: center;
   display: flex;
@@ -202,7 +202,6 @@ background-color: rgba(255, 255, 255, 0.759);
   align-self: center;
   max-width: 100%;
   border-radius: 4px;
-  color:var(--text);
 }
 
 
@@ -246,8 +245,8 @@ align-items: center;
   cursor: pointer;
   text-align: center;
   transition: .3s ease;
-  margin-bottom: 50px;
-  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   
  
 }
@@ -279,26 +278,34 @@ body {
   color:  rgb(35, 0, 193);
   padding-inline-end: 50px ;
 } */
-
-
-#logo {
-margin:0px;
-color: var(--red);
+#programming-languages-1{
+display: flex;
+justify-content: space-evenly;
+padding-bottom: 20px;
 }
 
-#profile-photo{
-  margin-top: 30px;
-}
+#programming-languages-2{
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+  }
+
 
 *{
   border: 1px solid red;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 1300px) {
   .projects{
       display: flex;
       flex-direction: row;
       justify-content: space-around;
+    }
+
+    .socials{
+      display: flex;
+      justify-content: space-around;
+      margin-left: 60px;
     }
 
     .description{
@@ -326,10 +333,22 @@ color: var(--red);
 
     .nav-item{
       font-size: 20px;
+      padding-left: 60px;
+      padding-right: 10px;
     }
 
     .form{
       width: 400px;
+    }
 
+    .nav-bar{
+      height: 40px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      background-color: rgb(232, 236, 255); 
     }
  }
